# CrewAI_SimpleFlow

./: .env  README.md  pyproject.toml
src/one/: __init__.py  main.py
